# kontrolluppgift-rs

./: .gitignore  Cargo.toml  EXEMPELFIL KONTROLLUPPGIFT INVESTERARAVDRAG (KU28)_2022.xml  EXEMPELFIL KONTROLLUPPGIFTER RÄNTA, UTDELNING M.M. KU20 FÖR_2022.xml  EXEMPELFIL KONTROLLUPPGIFTER RÄNTA, UTDELNING M.M. KU21 FÖR_2022.xml  README.md  Readme.md
crates/kontrolluppgift/: Cargo.toml  EXEMPELFIL KONTROLLUPPGIFT FÖR ARBETSGIVARE MED SOCIALAVGIFTSAVTAL (KU10)_2022.xml  EXEMPELFIL KONTROLLUPPGIFT TOMTRÄTTSAVGÄLD (KU26) FÖR KOMMUNER M.FL._2022.xml  EXEMPELFIL KONTROLLUPPGIFTER RÄNTA, UTDELNING M.M. KU25 FÖR_2022.xml  Readme.md
crates/kontrolluppgift/src/: error.rs  ku10.rs  ku13.rs  ku14.rs  ku16.rs  ku17.rs  ku18.rs  ku19.rs  ku20.rs  ku21.rs  ku25.rs  ku26.rs  ku28.rs  ku30.rs  ku31.rs  ku32.rs  lib.rs
crates/kontrolluppgift_macro/: Cargo.toml
crates/kontrolluppgift_macro/src/: lib.rs
crates/kontrolluppgift_macros/: Cargo.toml
crates/kontrolluppgift_macros/src/: Kontrolluppgifter_COMPONENT_9.0.xsd  SKV_COMMON_9.0.xsd  lib.rs  type_generator.rs
crates/kontrolluppgift_macros/src/type_generator/: complex_type_generator.rs  parser_serde.rs  simple_type_generator.rs
src/: error.rs  ku10.rs  ku20.rs  ku21.rs  ku25.rs  ku26.rs  ku28.rs  lib.rs
