[package]
name = "kontrolluppgift"
version = "0.3.0"
edition = "2021"
description = "A library for dealing with Skatteverkets data format for Kontrolluppgift"
license= "MIT"
repository = "https://github.com/lukashermansson/kontrolluppgift"
keywords = ["skatteverket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"]}

[dev-dependencies]
serde-xml-rs = "0.6.0"
