[package]
name = "kontrolluppgift"
version = "0.8.0"
edition = "2021"
description = "A library for dealing with Skatteverkets data format for Kontrolluppgift"
license= "MIT"
repository = "https://github.com/lukashermansson/kontrolluppgift"
keywords = ["skatteverket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.28.0"}

