[package]
name = "kontrolluppgift"
version = "0.16.0"
edition = "2021"
description = "A library for dealing with Skatteverkets data format for Kontrolluppgift"
license= "MIT"
repository = "https://github.com/lukashermansson/kontrolluppgift"
keywords = ["skatteverket", "deserialization", "serialization"]

[dependencies]
quick-xml = { version = "0.28.0"}
kontrolluppgift_macros = { path = "../kontrolluppgift_macros", version= "0.2.0"}

