[package]
name = "kontrolluppgift"
version = "0.20.0"
edition = "2021"
description = "A library for dealing with Skatteverkets data format for Kontrolluppgift"
license= "MIT"
repository = "https://github.com/lukashermansson/kontrolluppgift"
keywords = ["skatteverket", "deserialization", "serialization"]

[dependencies]
quick-xml = { version = "0.29.0"}
kontrolluppgift_macros = { path = "../kontrolluppgift_macros", version= "0.4.0"}
regex = "1"
