[package]
name = "kontrolluppgift_macros"
version = "0.3.0"
edition = "2021"
description = "Derive macros for use within the kontrolluppgift crate"
license= "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"


[lib]
proc-macro = true